--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/js-yaml": "^4.0.9",
     "axios": "^1.8.4",
     "chalk": "^4.1.2",
     "commander": "^13.1.0",
     "dotenv": "^16.5.0",
     "ignore": "^7.0.3",
+    "js-yaml": "^4.1.0",
     "openai": "^4.95.0",
     "ora": "^5.4.1"
   }
