--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "@typescript-eslint/typescript-estree": "^8.30.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
