--- a/package.json
+++ b/package.json
@@ -1,24 +1,42 @@
 {
   "name": "vibesafe",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A CLI tool to scan your codebase for security vibes.",
   "main": "dist/index.js",
   "bin": {
     "vibesafe": "dist/index.js"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/slowcoder360/vibesafe.git"
+  },
   "keywords": [
     "security",
     "scanner",
-    "cli"
+    "cli",
+    "vulnerability",
+    "secrets",
+    "dependencies",
+    "cve"
   ],
-  "author": "",
+  "author": "slowcoder360",
   "license": "SEE LICENSE IN LICENSE",
+  "bugs": {
+    "url": "https://github.com/slowcoder360/vibesafe/issues"
+  },
+  "homepage": "https://github.com/slowcoder360/vibesafe#readme",
   "devDependencies": {
     "@types/node": "^22.14.1",
     "@typescript-eslint/typescript-estree": "^8.30.1",
