--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,20 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
-yarn.lock
-*.env
+# package-lock.json # Keep lockfiles tracked!
+# yarn.lock # Keep lockfiles tracked!
+.env
+.env.*
+!/.env.example # Example env files are ok
 dist/
 build/
+
+# Log files
+*.log
+
+# Markdown files (except README)
+*.md
+!README.md
 
 # Python
 __pycache__/
@@ -38,5 +47,5 @@ Thumbs.db
 *.swo
 
 # Test Reports
-test-*.md
-test-*.json 
+# test-*.md # Covered by *.md above
+# test-*.json 
