--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,5 +109,13 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": [
+    "src/**/*" // Explicitly include only files in src
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test-data" // Add test-data here
+  ]
 }
